# debtors-scraper

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  scrape.py
.github/: FUNDING.yml
.github/workflows/: main.yml  scrape.yml
data/: listaFC1.json  listaFC2.json  listaFC3.json  listaFC4.json  listaFC5.json  listaFC6.json  listaFS1.json  listaFS2.json  listaFS3.json  listaFS4.json  listaFS5.json  listaFS6.json
src/: config.py  joiner.py  models.py  parser.py  scraper.py  utils.py
tests/: test_joiner.py  test_utils.py
tests/fixtures/: pdf_generator.py
tests/test_parser/: test_extract_last_updated.py  test_extract_metadata.py  test_parse_colective_debtor.py  test_parse_file.py  test_parse_files.py  test_parse_singular_debtor.py
