[tool.poetry]
name = "devedores-scraper"
version = "0.1.0"
description = ""
authors = ["Francisco Macedo <franciscovcbm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
requests = "^2.31.0"
pydantic = "^2.6.1"
tabula-py = "^2.9.0"
pypdf = "^4.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
reportlab = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
